--- a/src/Skills/Skills.module.css
+++ b/src/Skills/Skills.module.css
@@ -3,6 +3,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: darkolivegreen;
+
 }
 
 .header{
@@ -12,51 +14,22 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
 }
 
 
 .mainContent{
     width: 100%;
     height: 400px;
-    margin-top: 100px;
+    /*margin-top: 50px;*/
     border: 1px solid white;
     display: flex;
     justify-content: space-between;
+
 }
 
-.contentOne{
+.skill{
     border: 1px solid yellow;
-    width: 25%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.innerOne{
-    width: 100%;
-    height: 50%;
-    border: 1px solid purple;
-    background-color: darkolivegreen;
-    display: flex;
-    justify-content: center;
-}
-
-.photoOne{
-    height: 50px;
-    width: 50px;
-    background-color: azure;
-}
-
-
-
-
-
-
-.contentTwo{
-    border: 1px solid yellow;
-    width: 25%;
+    /*width: 25%;*/
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -64,16 +37,17 @@
 
 }
 
-.innerTwo {
+.inner{
     width: 100%;
     height: 50%;
     border: 1px solid purple;
     background-color: darkolivegreen;
     display: flex;
     justify-content: center;
+
 }
 
-.photoTwo{
+.photo{
     height: 50px;
     width: 50px;
     background-color: azure;
@@ -81,36 +55,6 @@
 
 
 
-
-
-
-.contentThree{
-    border: 1px solid yellow;
-    width: 25%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.innerThree{
-    width: 100%;
-    height: 50%;
-    border: 1px solid purple;
-    background-color: darkolivegreen;
-    display: flex;
-    justify-content: center;
-}
-
-
-
-
-
-.photoThree{
-    height: 50px;
-    width: 50px;
-    background-color: azure;
-}
 
 
 
