--- a/src/Projects/Projects.module.css
+++ b/src/Projects/Projects.module.css
@@ -9,6 +9,7 @@
 .myProject{
     border: 1px solid white;
     width: 80%;
+    /*height: 80%;*/
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -32,7 +33,7 @@
 .contentOne{
     border: 1px solid #bf2000;
     width: 100%;
-    margin-top: 350px;
+    /*margin-top: 350px;*/
     background-color: #b564ff;
 }
 
