--- a/src/Skills/Skills.module.css
+++ b/src/Skills/Skills.module.css
@@ -14,13 +14,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+
 }
 
 
 .mainContent{
     width: 100%;
     height: 400px;
-    /*margin-top: 50px;*/
     border: 1px solid white;
     display: flex;
     justify-content: space-between;
