--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -1,80 +1,14 @@
 .header{
-    height: 60px;
-    padding-top: 10px;
-    width: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 2;
-    background-color: #bf2000;
-
-}
-
-*,
-*:before,
-*:after{
-    box-sizing: border-box;
-}
-
-
-.container {
-    width: 80%;
-    max-width: 1200px;
-    margin: 0 auto;
-
-}
-
-.inner {
+    height: 70px;
+    background: #ef2010;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+}
+
+.container{
+    width: 80%;
+    display: flex;
+    justify-content: flex-end;
     align-items: center;
-
 }
 
-
-
-
-.headerLogo{
-    font-size: 30px;
-    font-weight: 700;
-    color: #ffffff;
-}
-
-
-
-
-/*nav*/
-.nav{
-    font-size: 15px;
-    text-transform: uppercase;
-}
-
-.nav a{
-    display: inline-block;
-    vertical-align: top;
-    margin: 0 15px;
-    color: #fefefe;
-    text-decoration: none;
-    transition: color 0.2s linear;
-    position: relative;
-}
-
-.navLink:after {
-    content: '';
-    width: 100%;
-    height: 3px;
-    background-color: #5a5a5a;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    z-index: 1;
-    display: none;
-}
-
-.navLink:hover{
-    color: #5a5a5a;
-}
-
-.navLink:hover:after {
-    display: block;
-}
