--- a/src/Projects/Projects.module.css
+++ b/src/Projects/Projects.module.css
@@ -7,68 +7,57 @@
 }
 
 .myProject{
-    border: 1px solid white;
-    width: 80%;
-    /*height: 80%;*/
     display: flex;
-    flex-direction: column;
+    border: 1px solid white;
+    min-height: 80%;
+    min-width: 65%;
     justify-content: center;
-    align-items: center;
-
+    flex-wrap: wrap;
 }
 
 .inner{
     display: flex;
+    border: 1px solid yellow;
+    min-width: 100%;
+    min-height: 400px;
     justify-content: space-between;
-    width: 100%;
-    border: 1px solid blue;
-    margin-top: 60px;
+    flex-wrap: wrap;
 }
-.innerOne{
+
+.Content{
     display: flex;
-    border: 1px solid orange;
-    width: 40%;
+    border: 1px solid purple;
 
 }
-.contentOne{
-    border: 1px solid #bf2000;
-    width: 100%;
-    /*margin-top: 350px;*/
-    background-color: #b564ff;
-}
 
-
-
-.innerTwo{
+.Container{
+    display: flex;
     border: 1px solid green;
-    width: 40%;
-    display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
 
-
-.contentTwo{
+.background{
     display: flex;
-    border: 1px solid #bf2000;
-    height: 200px;
-    width: 100%;
-    margin-top: 350px;
-    background-color: #b564ff;
-}
-
-.button{
-    display: flex;
+    border: 1px solid #ef2010;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    min-width: 350px;  /*300px*/
+    min-height: 60%;
+    background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGlmkX_UkGaHPhax-pcVaHDch65_VFr7cwnuts6IvkemXk4hhg9A&s");
+}
 
- }
-
-.contentTwoInner{
+.Span{
     display: flex;
+    border: 1px solid yellow;
+    min-height: 40%;
+    min-width: 100%;
     flex-direction: column;
+    justify-content: flex-start;
 
 }
+
+
