--- a/src/Skills/Skills.module.css
+++ b/src/Skills/Skills.module.css
@@ -5,44 +5,53 @@
     align-items: center;
     background-color: darkolivegreen;
 
+
 }
 
 .header{
+    border: 1px solid ;
     width: 80%;
-    border: 1px solid;
+    min-height: 80%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;
-
 }
 
 
 .mainContent{
-    width: 100%;
-    height: 400px;
-    border: 1px solid white;
     display: flex;
+    border: 1px solid white;
+    min-height: 470px;
+    width: 100%;
     justify-content: space-between;
+    /*flex-wrap: wrap;*/
+}
+
+.Container{
+    display: flex;
+    border: 1px solid blue;
+    min-height: 90%;
+    width: 100%;
+    justify-content: center;
 
 }
 
 .skill{
     border: 1px solid yellow;
-    /*width: 25%;*/
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
 
+
 }
 
 .inner{
     width: 100%;
-    height: 50%;
+    min-height: 50%;
     border: 1px solid purple;
-    background-color: darkolivegreen;
+    background-color: #6b1342;
     display: flex;
     justify-content: center;
 
