--- a/src/Contacts/Contacts.module.css
+++ b/src/Contacts/Contacts.module.css
@@ -7,17 +7,21 @@
 }
 
 .content{
-    width: 80%;
-    height: 250px;
-    border: 1px solid white;
     display: flex;
-    flex-direction:column;
-    align-items: center;
+    border: 1px solid white;
+    width: 80%;
+    min-height: 40%;
+    flex-direction: column;
     justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
-.innerContent{
-    width: 40%;
-    height: 20%;
-    background-color: rosybrown;
+.contactInfo{
+    display: flex;
+    border: 1px solid greenyellow;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
