--- a/src/Footer/Footer.module.css
+++ b/src/Footer/Footer.module.css
@@ -2,6 +2,7 @@
     height: 300px;
     display: flex;
     justify-content: center;
+    align-items: center;
     background-color: yellow;
 }
 
@@ -22,11 +23,5 @@
     background-color: #bc2e80;
     display: flex;
     justify-content: space-between;
-}
-.list{
-    width: 15%;
-    height: 100%;
-    border: 1px solid;
-    background-color: #bf2000;
 }
 
