--- a/src/Skills/Skills.module.css
+++ b/src/Skills/Skills.module.css
@@ -1,5 +1,5 @@
 .skills{
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,17 +25,17 @@
     min-height: 470px;
     width: 100%;
     justify-content: space-between;
-    /*flex-wrap: wrap;*/
+    flex-wrap: wrap;
 }
 
-.Container{
-    display: flex;
-    border: 1px solid blue;
-    min-height: 90%;
-    width: 100%;
-    justify-content: center;
+/*.Container{*/
+/*    display: flex;*/
+/*    border: 1px solid blue;*/
+/*    min-height: 470px;*/
+/*    width: 100%;*/
+/*    justify-content: center;*/
 
-}
+/*}*/
 
 .skill{
     border: 1px solid yellow;
