--- a/src/Footer/FooterMenu.module.css
+++ b/src/Footer/FooterMenu.module.css
@@ -3,8 +3,8 @@
     display: flex;
 }
 .list{
-    width: 15%;
-    height: 100%;
+    width: 50px;
+    height: 50px;
     border: 1px solid;
     background-color: #bf2000;
 }
