--- a/src/Footer/Footer.module.css
+++ b/src/Footer/Footer.module.css
@@ -3,14 +3,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: yellow;
+    /*background-color: yellow;*/
 }
 
 
 .content{
     width: 80%;
     height: 250px;
-    border: 1px solid white;
+    /*border: 1px solid white;*/
     display: flex;
     flex-direction:column;
     align-items: center;
@@ -20,7 +20,7 @@
 .innerContent{
     width: 40%;
     height: 20%;
-    background-color: #bc2e80;
+    /*background-color: #bc2e80;*/
     display: flex;
     justify-content: space-between;
 }
