--- a/src/Header/NavMenu.module.css
+++ b/src/Header/NavMenu.module.css
@@ -3,3 +3,12 @@
     display: flex;
     justify-content: space-between;
 }
+
+.Nav a{
+    font-family: 'Encode Sans Semi Expanded', sans-serif;
+    font-weight: 900;
+}
+
+.Link{
+    text-decoration: none;
+}
