--- a/src/Projects/Projects.module.css
+++ b/src/Projects/Projects.module.css
@@ -3,12 +3,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #b564ff;
+    /*background-color: #b564ff;*/
 }
 
 .myProject{
     display: flex;
-    border: 1px solid white;
+    /*border: 1px solid white;*/
     min-height: 80%;
     min-width: 80%;
     justify-content: center;
@@ -17,7 +17,7 @@
 
 .inner{
     display: flex;
-    border: 1px solid yellow;
+    /*border: 1px solid yellow;*/
     min-width: 100%;
     min-height: 400px;
     justify-content: space-between;
@@ -32,7 +32,7 @@
 
 .Container{
     display: flex;
-    border: 1px solid green;
+    /*border: 1px solid green;*/
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
@@ -41,7 +41,7 @@
 
 .background{
     display: flex;
-    border: 1px solid #ef2010;
+    /*border: 1px solid #ef2010;*/
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -52,7 +52,7 @@
 
 .Span{
     display: flex;
-    border: 1px solid yellow;
+    /*border: 1px solid yellow;*/
     min-height: 40%;
     min-width: 100%;
     flex-direction: column;
