--- a/src/Skills/Skills.module.css
+++ b/src/Skills/Skills.module.css
@@ -3,13 +3,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: darkolivegreen;
+    /*background-color: darkolivegreen;*/
 
 
 }
 
 .header{
-    border: 1px solid ;
+    /*border: 1px solid ;*/
     width: 80%;
     min-height: 80%;
     display: flex;
@@ -21,7 +21,7 @@
 
 .mainContent{
     display: flex;
-    border: 1px solid white;
+    /*border: 1px solid white;*/
     min-height: 470px;
     width: 100%;
     justify-content: space-between;
@@ -31,7 +31,7 @@
 
 
 .skill{
-    border: 1px solid yellow;
+    /*border: 1px solid yellow;*/
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -43,7 +43,7 @@
 .inner{
     width: 100%;
     min-height: 50%;
-    border: 1px solid purple;
+    /*border: 1px solid purple;*/
     background-color: #6b1342;
     display: flex;
     justify-content: center;
