--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
   height: 100vh;
-  /*background: url(./img/intro.jpg) repeat;*/
-  /*background-attachment: fixed;*/
-  /*-webkit-background-size: cover;*/
-  /*background-size: cover;*/
+  background: url(./img/intro.jpg) repeat;
+  background-attachment: fixed;
+  -webkit-background-size: cover;
+  background-size: cover;
 }
 
 code {
