--- a/src/Main/Main.module.css
+++ b/src/Main/Main.module.css
@@ -1,3 +1,5 @@
+
+
 .main{
     height: 100vh;
     display: flex;
@@ -19,6 +21,8 @@
 .greeting{
     display: flex;
     flex-direction: column;
+    font-family: 'Encode Sans Semi Expanded', sans-serif;
+    font-weight: 900;
 
 }
 
