--- a/src/Contacts/Contacts.module.css
+++ b/src/Contacts/Contacts.module.css
@@ -12,7 +12,6 @@
     width: 80%;
     min-height: 40%;
     flex-direction: column;
-
     align-items: center;
     flex-wrap: wrap;
 }
@@ -37,4 +36,10 @@
 
 .contactInfo input, textarea{
   width: 100%;
+}
+
+@media screen and (max-width: 504px){
+    .contactInfo{
+        width: 100%;
+    }
 }
