--- a/src/Footer/Footer.module.css
+++ b/src/Footer/Footer.module.css
@@ -25,3 +25,9 @@
     justify-content: space-between;
 }
 
+@media screen and (max-width: 808px){
+    .innerContent{
+        width: 100%;
+    }
+}
+
