--- a/src/Footer/FooterMenu.module.css
+++ b/src/Footer/FooterMenu.module.css
@@ -9,3 +9,9 @@
     background-color: #bf2000;
 }
 
+@media screen and (max-width: 808px){
+    .list{
+        width: 40px;
+        height: 40px;
+    }
+}
