--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -1,6 +1,6 @@
 .header{
     height: 70px;
-    /*background: #ef2010;*/
+    background: url(.././img/Header.png);
     display: flex;
     justify-content: center;
 }
@@ -10,5 +10,6 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
+
 }
 
