--- a/src/Main/Main.module.css
+++ b/src/Main/Main.module.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /*background-color: rosybrown;*/
+    background: #1A1A1A;
 
 }
 
@@ -21,8 +21,12 @@
 .greeting{
     display: flex;
     flex-direction: column;
-    font-family: 'Encode Sans Semi Expanded', sans-serif;
-    font-weight: 900;
+    font-family: 'Raleway', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 30px;
+    color: white;
 
 }
 
