--- a/src/Projects/Projects.module.css
+++ b/src/Projects/Projects.module.css
@@ -18,7 +18,7 @@
 .inner{
     display: flex;
     /*border: 1px solid yellow;*/
-    min-width: 100%;
+    width: 100%;
     min-height: 400px;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -59,5 +59,15 @@
     justify-content: flex-start;
 
 }
+
+
+@media screen and (max-width: 703px){
+    .inner{
+        width: 100%;
+        justify-content: center;
+    }
+}
+
+
 
 
