--- a/src/Skills/Skills.module.css
+++ b/src/Skills/Skills.module.css
@@ -3,9 +3,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /*background-color: darkolivegreen;*/
-
-
+    background: #464646;
+    color: white;
 }
 
 .header{
@@ -25,6 +24,7 @@
     min-height: 470px;
     width: 100%;
     justify-content: space-between;
+    align-items: center;
     flex-wrap: wrap;
 }
 
@@ -56,9 +56,56 @@
     background-color: azure;
 }
 
+@media screen and (max-width: 542px){
+    .skill{
+        width: 100%;
+    }
+}
+
+.slider {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.slider__item{
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width:  250px;
+    min-height: 200px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    padding: 30px;
+    box-shadow: 0px 10px 26px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    /*background: url(".././img/js_img.png") center / cover;*/
+}
+
+.slider__item:before{
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background: rgba(80, 80, 80, 0.86);
+    transition: all 0.2s;
+}
+
+.slider__image{
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -2;
+}
 
 
-
+.slider__item:hover:before{
+    background:rgba(64, 101, 255, 0.86);
+}
 
 
 
