--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   /*background-attachment: fixed;*/
   /*-webkit-background-size: cover;*/
   /*background-size: cover;*/
-  background: #a24347;
+  /*background: white;*/
 }
 
 code {
