--- a/src/Footer/Footer.module.css
+++ b/src/Footer/Footer.module.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /*background-color: yellow;*/
+    background-color: #F6F6F8;
 }
 
 
@@ -20,7 +20,6 @@
 .innerContent{
     width: 40%;
     height: 20%;
-    /*background-color: #bc2e80;*/
     display: flex;
     justify-content: space-between;
 }
