--- a/src/Footer/FooterMenu.module.css
+++ b/src/Footer/FooterMenu.module.css
@@ -1,13 +1,48 @@
-
-.Menu{
-    display: flex;
+*{
+    margin: 0;
+    padding: 0;
 }
+
+
+
 .list{
+    margin-bottom: 20px;
+}
+
+.list a{
+    display: inline-block;
     width: 50px;
     height: 50px;
-    border: 1px solid;
-    background-color: #bf2000;
+    background: #d4d4d4;
+    /*margin: 10px;*/
+    border-radius: 30%;
+    text-align: center;
+
 }
+
+
+.list a i {
+    color: #0088CC;
+    font-size: 20px;
+    margin-top: 15px;
+}
+
+.list a:hover{
+    background: #0088cc;
+    transition: 1s;
+}
+
+
+.list a:hover i{
+    color: #f1f1f1;
+    transition: 1s;
+    transform: scale(1.3);
+}
+
+
+
+
+
 
 @media screen and (max-width: 808px){
     .list{
