--- a/src/Main/Main.module.css
+++ b/src/Main/Main.module.css
@@ -3,35 +3,77 @@
 .main{
     height: 100vh;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    /*justify-content: center;*/
     align-items: center;
-    background: #1A1A1A;
+    background: url(".././img/main_img.png");
 
+
+}
+
+
+.Header{
+    display: flex;
+    border: 1px solid red;
+    width: 100%;
+    height: 50px;
 }
 
 .container{
     width: 80%;
+    min-height: 50%;
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+    margin-top: 170px;
+}
+
+.container button{
+    margin-bottom: 50px;
+    width: 200px;
+    height: 45px;
+    border-radius: 30px;
+    background: #4985FF;
+}
+.container button{
+    Font-Family: 'Montserrat', sans-serif;
+    Font-Style: Medium;
+    Font-Size: 16px;
+    Line-Height: 19.5px;
+    Vertical-Align: Top;
+    color: white;
+    border: none;
+    outline: none;
+}
+.container button:hover{
+    background: #3658b0;
 }
 
 
 .greeting{
     display: flex;
+    width: 820px;
+    height: 129px;
+    margin-top: 50px;
     flex-direction: column;
+    text-align: center;
     font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 30px;
     color: white;
-
 }
 
-.photo{
-    height: 400px;
-    width: 300px;
-    background-color: aqua;
+.greeting span{
+    Font-Family: 'Montserrat', sans-serif;
+    Font-Style: ExtraBold;
+    Font-Size: 48px;
+    Line-Height: 110%;
+    Vertical-Align: Top;
 }
+
+
+
