--- a/src/Skills/Skills.module.css
+++ b/src/Skills/Skills.module.css
@@ -46,11 +46,7 @@
 }
 
 
-@media screen and (max-width: 542px){
-    .skill{
-        width: 100%;
-    }
-}
+
 
 .slider {
     display: flex;
@@ -78,7 +74,8 @@
     position: absolute;
     left: 0;
     top: 0;
-    z-index: 3;
+    z-index: 1;
+    /*-1*/
     width: 100%;
     height: 100%;
     background: rgba(80, 80, 80, 0.86);
@@ -90,6 +87,7 @@
     left: 0;
     top: 0;
     z-index: 2;
+    /*-2*/
 }
 
 
@@ -98,5 +96,10 @@
     background:rgba(64, 101, 255, 0.86);
 }
 
+@media screen and (max-width: 542px){
+    .skill{
+        width: 100%;
+    }
+}
 
 
