--- a/src/Contacts/Contacts.module.css
+++ b/src/Contacts/Contacts.module.css
@@ -1,5 +1,5 @@
 .contacts {
-    height: 100vh;
+    padding: 100px 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,10 +17,33 @@
 
 .contactInfo{
     display: flex;
-    width: 400px;
+    width: 550px;
     flex-direction: column;
     align-items: center;
 }
+
+.title{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 36px;
+    line-height: 52px;
+    vertical-align: top;
+    color: #323232;
+    margin-bottom: 50px;
+}
+
+
+
+.contactInfo input, .contactInfo textarea{
+    background-color: transparent;
+    border: none;
+    border-bottom: 3px solid #bfcbc6;
+    padding: 10px 15px;
+    margin-bottom: 20px;
+}
+
+
+
+/*#4985FF*/
 
 .messageArea{
     resize: none;
