--- a/src/Main/Main.module.css
+++ b/src/Main/Main.module.css
@@ -1,12 +1,14 @@
 
 
 .main{
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     /*justify-content: center;*/
     align-items: center;
     background: url(".././img/main_img.png");
+    background-size: cover;
+    background-position: center;
 
 
 }
@@ -54,8 +56,8 @@
 
 .greeting{
     display: flex;
-    width: 820px;
-    height: 129px;
+    width: 100%;
+    min-height: 129px;
     margin-top: 50px;
     flex-direction: column;
     text-align: center;
@@ -65,6 +67,7 @@
     font-size: 16px;
     line-height: 30px;
     color: white;
+    margin-bottom: 60px;
 }
 
 .greeting span{
