--- a/src/Main/NavMenu.module.css
+++ b/src/Main/NavMenu.module.css
@@ -75,3 +75,10 @@
 .nav__link:hover:after {
     display: block;
 }
+
+
+@media screen and (max-width: 660px){
+  .nav{
+      display: none;
+  }
+}
