--- a/src/Main/BurgerMenu.css
+++ b/src/Main/BurgerMenu.css
@@ -1,6 +1,6 @@
 
 .menu-btn {
-    margin: 0 20px;
+    margin-left: 160px;
     display: block;
     width: 50px;
     height: 50px;
@@ -70,6 +70,8 @@
     margin-right: -25px;
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
+    display: flex;
+    flex-direction: column;
 }
 .menu-nav_active {
     transform: scaleX(1) translateX(0%);
