--- a/src/Main/BurgerMenu.css
+++ b/src/Main/BurgerMenu.css
@@ -1,13 +1,12 @@
 
 .menu-btn {
-    margin-left: 160px;
     display: block;
     width: 50px;
     height: 50px;
-    /*background-color: #fff;*/
     border-radius: 50%;
     position: relative;
 }
+
 .menu-btn span,
 .menu-btn span::before,
 .menu-btn span::after {
@@ -46,6 +45,7 @@
     display: none;
     justify-content: center;
     align-items: center;
+    width: 100vw;
 }
 .menu-nav a {
     text-decoration: none;
@@ -64,7 +64,6 @@
     visibility: hidden;
     height: 50px;
     line-height: 50px;
-    /*background-color: #fff;*/
     padding-right: 25px;
     padding-left: 25px;
     margin-right: -25px;
@@ -83,5 +82,6 @@
 @media screen and (max-width: 660px){
    .menu-block{
        display: flex;
+       justify-content: flex-end;
    }
 }
