--- a/src/Skills/Skills.module.css
+++ b/src/Skills/Skills.module.css
@@ -41,8 +41,25 @@
     align-items: center;
     flex-wrap: wrap;
 }
-.mainContent button{
-    margin: 10px 10px;
+
+.button_slider i {
+     color: #323232;
+}
+
+.button_slider{
+    font-Family: 'Montserrat', sans-serif;
+    font-Size: 16px;
+    color: #ff2716;
+    border: none;
+    outline: none;
+}
+
+.button_slider:hover{
+    transition: 0.4s;
+}
+
+.button_slider a:hover{
+    color: red;
 }
 
 .skill{
@@ -51,22 +68,14 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-
 }
 
-/*.skill {*/
-/*     display: flex;*/
-/*     flex-wrap: wrap;*/
-/* }*/
 
 .skill__item{
     position: relative;
     overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
     width:  250px;
-    min-height: 200px;
+    height: 250px;
     padding: 30px;
     box-shadow: 0px 10px 26px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
@@ -74,6 +83,10 @@
 
 .skill__item div{
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
 }
 
 .skill__item:before{
@@ -82,7 +95,6 @@
     left: 0;
     top: 0;
     z-index: 0;
-    /*-1*/
     width: 100%;
     height: 100%;
     background: rgba(80, 80, 80, 0.86);
@@ -101,12 +113,36 @@
 }
 
 .skill__item:hover:before{
-    background:rgba(64, 101, 255, 0.86);
+     background: rgba(100, 100, 100, 0.86);
 }
 
-.skill__button{
-    border-radius: 30px;
+
+
+.skill__button {
+    text-align:center;
+    display:block;
+    font-Family: 'Montserrat', sans-serif;
+    text-decoration: none;
+    font-weight: 300;
+    font-size: 14px;
+    border: #fff9f8 1px solid;
+    color: #fff9f8;
+    padding: 3px;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin: 20px auto;
+    transition: .5s;
+    border-radius: 0px;
 }
+
+.skill__button:hover {
+    top: 5px;
+    transition: .5s;
+    border-radius: 10px;
+}
+
+
+
 
 
 @media screen and (max-width: 542px){
